--- a/Задача 9/BalancedBinaryTree(АВЛ)/BalancedBinaryTree/BalancedBinaryTree.vcxproj.filters
+++ b/Задача 9/BalancedBinaryTree(АВЛ)/BalancedBinaryTree/BalancedBinaryTree.vcxproj.filters
@@ -18,12 +18,12 @@
     <ClCompile Include="main.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Tree.cpp">
+    <ClCompile Include="BinaryTree.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Tree.h">
+    <ClInclude Include="BinaryTree.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
