--- a/Задача 9/BalancedBinaryTree(АВЛ)/BalancedBinaryTree/BalancedBinaryTree.vcxproj
+++ b/Задача 9/BalancedBinaryTree(АВЛ)/BalancedBinaryTree/BalancedBinaryTree.vcxproj
@@ -80,10 +80,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.c" />
-    <ClCompile Include="Tree.cpp" />
+    <ClCompile Include="BinaryTree.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Tree.h" />
+    <ClInclude Include="BinaryTree.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
