--- a/accepted/Тест 2.2/Тест 2.2/Тест 2.2.vcxproj.filters
+++ b/accepted/Тест 2.2/Тест 2.2/Тест 2.2.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="Тест 2.2.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="MyStack.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="MyStack.h">
+      <Filter>Исходные файлы</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
