--- a/accepted/Тест 2.2/Тест 2.2/Тест 2.2.vcxproj
+++ b/accepted/Тест 2.2/Тест 2.2/Тест 2.2.vcxproj
@@ -147,7 +147,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="MyStack.cpp" />
     <ClCompile Include="Тест 2.2.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="MyStack.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
