--- a/Задача-6.2/Задача-6.2/Задача-6.2.vcxproj.filters
+++ b/Задача-6.2/Задача-6.2/Задача-6.2.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="Задача-6.2.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="myStack.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="myStack.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
