--- a/Задача-6.1/Задача-6.1/Задача-6.1.vcxproj
+++ b/Задача-6.1/Задача-6.1/Задача-6.1.vcxproj
@@ -147,7 +147,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="myStack.cpp" />
     <ClCompile Include="Задача-6.1.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="myStack.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
