--- a/accepted/Задача 4.2/Задача 4.2/Задача 4.2.vcxproj.filters
+++ b/accepted/Задача 4.2/Задача 4.2/Задача 4.2.vcxproj.filters
@@ -24,7 +24,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="myQSort.h">
-      <Filter>Исходные файлы</Filter>
+      <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
