изменил расположение файлов .h

--- a/accepted/Задача 8.2/Задача 8.2/Задача 8.2.vcxproj.filters
+++ b/accepted/Задача 8.2/Задача 8.2/Задача 8.2.vcxproj.filters
@@ -30,13 +30,13 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="myExpression.h">
-      <Filter>Исходные файлы</Filter>
+      <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="myStack.h">
-      <Filter>Исходные файлы</Filter>
+      <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="myTree.h">
-      <Filter>Исходные файлы</Filter>
+      <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
