--- a/accepted/Задача 7.1/Задача 7.1/Задача 7.1.vcxproj.filters
+++ b/accepted/Задача 7.1/Задача 7.1/Задача 7.1.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="Задача 7.1.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="MyList.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="MyList.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
