--- a/accepted/Задача 7.2/Задача 7.2/Задача 7.2.vcxproj
+++ b/accepted/Задача 7.2/Задача 7.2/Задача 7.2.vcxproj
@@ -147,7 +147,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="MyList.cpp" />
+    <ClCompile Include="WarAlgorithm.cpp" />
     <ClCompile Include="Задача 7.2.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="MyList.h" />
+    <ClInclude Include="WarAlgorithm.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
