--- a/Task 7.3/Task 7.3/Task 7.3.vcxproj.filters
+++ b/Task 7.3/Task 7.3/Task 7.3.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="PhoneBook.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="MyMergeSort.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="PhoneBook.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="MyMergeSort.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
