--- a/Task 11.1/Task 11.1/Task 11.1.vcxproj.filters
+++ b/Task 11.1/Task 11.1/Task 11.1.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="MyList.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Task 11.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CapitalsAlgorithm.h">
