--- a/Task 11.1/Task 11.1/Task 11.1.vcxproj
+++ b/Task 11.1/Task 11.1/Task 11.1.vcxproj
@@ -150,6 +150,7 @@
     <ClCompile Include="CapitalsAlgorithm.cpp" />
     <ClCompile Include="Graph.cpp" />
     <ClCompile Include="MyList.cpp" />
+    <ClCompile Include="Task 11.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CapitalsAlgorithm.h" />
