--- a/Test 3.2/Test 3.2/Test 3.2.vcxproj
+++ b/Test 3.2/Test 3.2/Test 3.2.vcxproj
@@ -149,6 +149,9 @@
   <ItemGroup>
     <ClCompile Include="Test 3.2.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Sort.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
