--- a/Test 3.2/Test 3.2/Test 3.2.vcxproj.filters
+++ b/Test 3.2/Test 3.2/Test 3.2.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClCompile Include="Test 3.2.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Sort.h">
