--- a/Новая папка/TestWork/TestWork/TestWork.vcxproj
+++ b/Новая папка/TestWork/TestWork/TestWork.vcxproj
@@ -139,7 +139,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="TestWork.cpp" />
+    <ClCompile Include="..\..\..\..\..\..\Downloads\main.cpp" />
+    <ClCompile Include="..\..\..\..\..\..\Downloads\MyList.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\..\..\..\..\..\Downloads\MyList.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
